// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnitLabel renders BTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  BTC
</Text>
`;

exports[`UnitLabel renders Satoshis correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  satoshis
</Text>
`;

exports[`UnitLabel renders mBTC correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  mBTC
</Text>
`;

exports[`UnitLabel when unit is undefined renders without errors 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#000000",
        "fontFamily": "System",
        "fontWeight": "400",
      },
      undefined,
    ]
  }
>
  ❓
</Text>
`;
